--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Users Table View Controller-->
+        <!--Users-->
         <scene sceneID="7IM-3N-die">
             <objects>
                 <tableViewController id="0Ze-kf-Cse" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,23 +25,23 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wk-pJ-Yq8">
-                                            <rect key="frame" x="16" y="0.0" width="60" height="60"/>
+                                            <rect key="frame" x="16" y="4" width="52" height="52"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="1wk-pJ-Yq8" secondAttribute="height" multiplier="1:1" id="nH2-oH-E12"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OTR-op-4FA">
-                                            <rect key="frame" x="96" y="19.5" width="244" height="21"/>
+                                            <rect key="frame" x="88" y="19.5" width="252" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="1wk-pJ-Yq8" firstAttribute="top" secondItem="c29-kC-00d" secondAttribute="top" id="134-pX-TF0"/>
+                                        <constraint firstItem="1wk-pJ-Yq8" firstAttribute="top" secondItem="c29-kC-00d" secondAttribute="top" constant="4" id="134-pX-TF0"/>
                                         <constraint firstItem="1wk-pJ-Yq8" firstAttribute="leading" secondItem="c29-kC-00d" secondAttribute="leadingMargin" id="9F4-dd-9gd"/>
                                         <constraint firstItem="OTR-op-4FA" firstAttribute="centerY" secondItem="c29-kC-00d" secondAttribute="centerY" id="Q8g-Nf-ZRS"/>
-                                        <constraint firstAttribute="bottom" secondItem="1wk-pJ-Yq8" secondAttribute="bottom" id="cDo-pV-h9C"/>
+                                        <constraint firstAttribute="bottom" secondItem="1wk-pJ-Yq8" secondAttribute="bottom" constant="4" id="cDo-pV-h9C"/>
                                         <constraint firstItem="OTR-op-4FA" firstAttribute="leading" secondItem="1wk-pJ-Yq8" secondAttribute="trailing" constant="20" id="cLB-aY-bXj"/>
                                         <constraint firstAttribute="trailing" secondItem="OTR-op-4FA" secondAttribute="trailing" constant="8" id="xTS-sQ-Igy"/>
                                     </constraints>
@@ -58,7 +58,7 @@
                             <outlet property="delegate" destination="0Ze-kf-Cse" id="nRW-TW-3fR"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="wuJ-rO-2nu"/>
+                    <navigationItem key="navigationItem" title="Users" id="wuJ-rO-2nu"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U95-VQ-3LS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
