attempt to fix constraints for image

--- a/Random Users/Storyboard/Base.lproj/Main.storyboard
+++ b/Random Users/Storyboard/Base.lproj/Main.storyboard
@@ -27,8 +27,9 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IU7-fE-SVh">
                                             <rect key="frame" x="20" y="0.0" width="44" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="44" id="1FU-JT-n2u"/>
-                                                <constraint firstAttribute="width" secondItem="IU7-fE-SVh" secondAttribute="height" multiplier="1:1" id="jL1-ve-BIg"/>
+                                                <constraint firstAttribute="width" secondItem="IU7-fE-SVh" secondAttribute="height" multiplier="1:1" id="LN1-lG-dda"/>
+                                                <constraint firstAttribute="height" constant="44" id="QMW-5o-saq"/>
+                                                <constraint firstAttribute="width" constant="44" id="Y5G-G9-y53"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghi-Iw-how">
@@ -41,10 +42,9 @@
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="Ghi-Iw-how" secondAttribute="trailing" id="3c9-wz-Cbi"/>
                                         <constraint firstItem="Ghi-Iw-how" firstAttribute="centerY" secondItem="CKv-aH-AzK" secondAttribute="centerY" id="4n1-Zj-tev"/>
-                                        <constraint firstAttribute="bottom" secondItem="IU7-fE-SVh" secondAttribute="bottom" id="RnQ-4K-nC5"/>
-                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="leading" secondItem="IU7-fE-SVh" secondAttribute="trailing" constant="8" id="aPM-1R-BkL"/>
-                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="top" secondItem="CKv-aH-AzK" secondAttribute="top" id="gVB-u1-s1l"/>
-                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="leading" secondItem="CKv-aH-AzK" secondAttribute="leading" constant="20" id="jG3-K8-0QI"/>
+                                        <constraint firstItem="Ghi-Iw-how" firstAttribute="leading" secondItem="IU7-fE-SVh" secondAttribute="trailing" constant="8" id="OOT-Z9-Kcs"/>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="centerY" secondItem="CKv-aH-AzK" secondAttribute="centerY" id="Xcr-jY-YfQ"/>
+                                        <constraint firstItem="IU7-fE-SVh" firstAttribute="leading" secondItem="CKv-aH-AzK" secondAttribute="leading" constant="20" id="YYc-PU-tbC"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -85,7 +85,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aOq-1W-08k">
                                         <rect key="frame" x="0.0" y="382" width="374" height="111.33333333333331"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wed-O8-Ypd">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wed-O8-Ypd">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="40.666666666666664"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                                 <nil key="textColor"/>
