--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -77,7 +77,8 @@
                                 <rect key="frame" x="20" y="84" width="335" height="365.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-ip-XzU">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="250"/>
+                                        <rect key="frame" x="0.0" y="1" width="335" height="247.5"/>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="250" id="TQZ-Uf-eQZ"/>
                                         </constraints>
