--- a/Random Users/Views/Base.lproj/Main.storyboard
+++ b/Random Users/Views/Base.lproj/Main.storyboard
@@ -17,40 +17,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="61" id="qdD-Ll-hS1" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="61"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" textLabel="fHd-il-unC" imageView="8xb-RE-Ocb" style="IBUITableViewCellStyleDefault" id="qdD-Ll-hS1" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qdD-Ll-hS1" id="T9g-gQ-3SR">
-                                    <rect key="frame" x="0.0" y="0.0" width="348" height="61"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="348" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igj-No-i9F">
-                                            <rect key="frame" x="70" y="30.5" width="268" height="0.0"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fHd-il-unC">
+                                            <rect key="frame" x="132" y="0.0" width="208" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7jl-hd-VNs">
-                                            <rect key="frame" x="8" y="4.5" width="52" height="52"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="52" id="mu9-HB-VZl"/>
-                                                <constraint firstAttribute="width" secondItem="7jl-hd-VNs" secondAttribute="height" multiplier="1:1" id="nse-mP-pEh"/>
-                                                <constraint firstAttribute="width" constant="52" id="qUM-wg-b8c"/>
-                                            </constraints>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="Lambda_Logo_Full" id="8xb-RE-Ocb">
+                                            <rect key="frame" x="16" y="0.0" width="101" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
                                         </imageView>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="7jl-hd-VNs" firstAttribute="leading" secondItem="T9g-gQ-3SR" secondAttribute="leading" constant="8" id="4u2-9L-vYv"/>
-                                        <constraint firstItem="igj-No-i9F" firstAttribute="centerY" secondItem="T9g-gQ-3SR" secondAttribute="centerY" id="CQl-Ja-eEP"/>
-                                        <constraint firstItem="7jl-hd-VNs" firstAttribute="height" secondItem="T9g-gQ-3SR" secondAttribute="height" multiplier="0.85" id="IrB-Gm-oTB"/>
-                                        <constraint firstItem="igj-No-i9F" firstAttribute="leading" secondItem="7jl-hd-VNs" secondAttribute="trailing" constant="10" id="S7A-kw-BpW"/>
-                                        <constraint firstItem="7jl-hd-VNs" firstAttribute="centerY" secondItem="T9g-gQ-3SR" secondAttribute="centerY" id="SLM-4z-6IP"/>
-                                        <constraint firstAttribute="trailing" secondItem="igj-No-i9F" secondAttribute="trailing" constant="10" id="Wdr-4J-tV7"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="userNameLabel" destination="igj-No-i9F" id="ehp-kT-tON"/>
-                                    <outlet property="userThumbImageView" destination="7jl-hd-VNs" id="Kbi-Vf-cV0"/>
                                     <segue destination="qo3-gc-XSk" kind="show" identifier="UserDetailSegue" id="rS4-mb-SKM"/>
                                 </connections>
                             </tableViewCell>
@@ -150,4 +137,7 @@
             <point key="canvasLocation" x="-945" y="-439"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lambda_Logo_Full" width="574" height="249"/>
+    </resources>
 </document>
